fix: Adjust layout for container-listas and center-align resultados

--- a/src/main/webapp/resources/core/css/liga.css
+++ b/src/main/webapp/resources/core/css/liga.css
@@ -40,6 +40,7 @@ main {
 .container-listas {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 2.5rem;
 }
 
@@ -122,6 +123,7 @@ main {
 .resultado {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   font-size: xx-large;
   font-weight: 600;
